--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@react-spring/parallax": "^9.7.4",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.48.0",
     "@types/aos": "^3.0.7",
@@ -21,6 +24,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-intl-redux": "^0.1.19",
     "@types/react-lottie": "^1.2.10",
+    "@types/three": "^0.167.1",
     "@vercel/speed-insights": "^1.0.12",
     "@vis.gl/react-google-maps": "^1.1.0",
     "antd": "^5.18.0",
@@ -52,7 +56,8 @@
     "redux-persist": "^6.0.0",
     "sass": "^1.77.4",
     "styled-components": "^6.1.11",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "three": "^0.167.0"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
