--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "query-string": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.13.0",
     "react-intl-redux": "^2.4.1",
     "react-lottie": "^1.2.4",
     "react-media": "^1.10.0",
