--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-sitemap": "^4.2.3",
     "query-string": "^9.0.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.13.0",
     "react-intl-redux": "^2.4.1",
