--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@vercel/speed-insights": "^1.0.12",
     "@vis.gl/react-google-maps": "^1.1.0",
     "antd": "^5.18.0",
-    "aos": "^3.0.0-beta.6",
+    "aos": "2.3.1",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "bignumber.js": "^9.1.2",
@@ -62,7 +62,6 @@
     "three": "^0.167.0"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.10.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
