--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "three": "^0.167.0"
   },
   "devDependencies": {
+    "@builder.io/partytown": "^0.10.2",
     "@types/node": "^18.15.11",
     "@types/react": "^18.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
