--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-intersection-observer": "^9.13.0",
     "react-intl-redux": "^2.4.1",
     "react-lottie": "^1.2.4",
