--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next": "15.3.8",
     "next-sitemap": "^4.2.3",
     "next-themes": "0.4.6",
+    "query-string": "^9.3.1",
     "react": "18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.3.1",
